fixed layout bugs

--- a/main.css
+++ b/main.css
@@ -12,6 +12,7 @@ body {
 }
 
 .hero {
+    box-sizing: border-box;
     flex-direction: column;
     height: 90vh;
     width: 75vw;
@@ -38,7 +39,7 @@ body {
 .menu-item {
     padding-top: 5vh;
     padding-left: 2vh;
-    font-size: 3vw;
+    font-size: 20px;
 }
 
 .side-nav {
@@ -58,13 +59,13 @@ body {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
+    height: 90vh;
     flex-wrap: wrap;
     padding: 1vw;
-    width: 94%;
+    width: 97%;
     background-color: #C45600;
-    box-shadow: 0 0 20px 5px black;
-    overflow: auto;
-    margin-bottom: 5vh;
+    overflow-y: auto;
+    box-sizing: border-box;
 }
 
 .project {
@@ -75,6 +76,7 @@ body {
     margin: 1vw;
     border: 1px solid black;
     background-color: #3F5866;
+    box-shadow: 0 0 20px 5px black;
 }
 
 img {
